--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tetris NES 1989</title>
+  <link rel="stylesheet" href="/src/style.css">
 </head>
 <body>
   <div id="app"></div>
